src/styles.scss
// Custom Theming for Angular Material
// For more information: https://material.angular.io/guide/theming
@use '@angular/material' as mat;
// Plus imports for other components in your app.

// Include the common styles for Angular Material. We include this here so that you only
// have to load a single css file for Angular Material in your app.
// Be sure that you only ever include this mixin once!
@include mat.core();
@import 'scss/colors';
@import 'scss/forms';
@import 'scss/fonts';
@import 'scss/utilities';

/* You can add global styles to this file, and also import other style files */

* {
	transition: all 0.1s;
}
html, body {
	background-color: $primary-bg;
	color: $primary-fg;
	width: 100vw;
}
body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }

a,
a:visited {
	color: $primary-fg;
	text-decoration: none;
}

a:hover,
a:active {
	color: darken($primary-fg, 25%);
}

.content {
	width: 1280px;
	padding-left: 2rem;
	padding-right: 2rem;
	margin: 0 auto;
}
.clock-container {
	display: grid;
	grid-template-columns: 1fr;
	gap: 2rem;
	text-align: center;

	.clock {
		position: relative;
		font-size: 13rem;
		padding-top: 5rem;
		padding-bottom: 4rem;
		padding-left: 1rem;
		cursor: pointer;
		border-radius: 1rem;
		background-color: lighten($primary-bg, 10%);
		box-shadow: 1px 2px 9px 3px darken($primary-bg, 3%);
		.time-item:nth-child(2) {
			// opacity: 0;
			// visibility: hidden;
			font-size: 4.5rem;
		}
		.time-item:nth-child(2)::before {
			content: ".";
			letter-spacing: 0.35rem;
		}

		.icon {
			opacity: 0.5;
			line-height: 0;
			.mat-icon {
				font-size: 4rem;
				height: 50px;
				width: 50px;
			}
		}
	}

	.clock.paused {
		background-color: lighten($primary-bg, 10%);
		border: 2px solid lighten($primary-bg, 20%);
		color: $primary-fg;
	}
	.clock.active {
		background-color: lighten($primary-bg, 15%);
		border: 2px solid $highlight;
		color: $highlight;
	}

	.clock.active.danger {
		color: $danger;
	}

	.clock.show-decimal {
		.time-item:nth-child(2) {
			opacity: 1;
			visibility: visible;
		}
	}

	.increment {
		position: absolute;
		top: 36px;
		right: 25px;
		font-size: 4rem;
		opacity: 0.45;
	}
}

.click-overlay {
	position: absolute;
	width: 100%;
	height: 100%;
	top: 0;
	left: 0;
}

.controls {
	display: grid;
	justify-items: center;
	gap: 1rem;

	margin-top: 2rem;
	margin-bottom: 2rem;

	font-size: 2rem;
	text-align: center;

	.time-presets {
		font-size: 0.9rem;
		width: 50vw;
		display: grid;
		grid-template-columns: repeat(6, minmax(0, 1fr));
		grid-template-rows: auto;
		gap: 0.5em;
		justify-content: space-evenly;
		align-items: center;
	}
	.control-group {
		width: 30vw;
		padding-top: 2rem;
		display: grid;
		gap: 0.5em;
		grid-template-columns: 1fr 1fr;
		justify-content: space-evenly;
		align-items: center;
		.control-btn {
			width: 150px;
		}
	}
	.settings {
		width: 30vw;
		display: grid;
		grid-auto-flow: column;
		gap: 1rem;
	}

	button > span {
		font-size: 18px;
	}
	.mat-icon {
		height: auto;
		width: auto;
		padding-top: 0.25rem;
	}
	.control {
		font-size: 1rem;
	}
	.control-btn {
		font-weight: bold;
		background-color: $primary-bg;
		color: $primary-fg;
		border: 2px solid $highlight;
		border-radius: 15px;
		padding: 0.35rem 1rem 0.35rem;
		cursor: pointer;
		width: 105px;
		outline: 0;
	}
	.control-btn:hover,
	.control-btn.active {
		background-color: $highlight;
		color: $primary-bg;
		outline: 0;
	}

	.select-container {
		text-align: right;
	}
}

mat-progress-bar {
	margin-top: 1rem;
	margin-bottom: 1rem;
}

@media only screen and (max-width: 1024px) {
	.content {
		max-width: 980px;
	}
	.clock-container {
		.clock {
			font-size: 9rem;
			padding-top: 6rem;
			padding-bottom: 5rem;
			.time-item:nth-child(2) {
				font-size: 3rem;
			}
		}
	}
	.controls {
		.time-presets {
			width: 70vw;
		}
		.settings {
			width: 40vw;
		}
	}
}

@media only screen and (max-width: 769px) {
	.content {
		max-width: 720px;
	}
	.clock-container {
		.clock {
			font-size: 7;
			.time-item:nth-child(2) {
				font-size: 2.5rem;
			}
		}

		.increment {
			top: 15px;
			right: 20px;
			font-size: 2rem;
		}
	}
	.controls {
		.time-presets,
		.settings {
			width: 85vw;
		}
	}
}

@media only screen and (max-width: 480px) {
	.content {
		max-width: 450px;
	}
	.clock-container {
		.clock {
			font-size: 5rem;
			padding-top: 3.5rem;
			padding-bottom: 2.5rem;
			padding-left: 1rem;
			.time-item:nth-child(2) {
				font-size: 1.5rem;
			}
		}
		.increment {
			top: 5px;
			right: 10px;
			font-size: 1rem;
		}
	}

	.controls {
		.time-presets,
		.settings {
			width: 100vw;
			max-width: 100vw;
			gap: 0.5rem;
		}
		button > span {
			font-size: 16px;
		}
		.control-btn {
			padding: 0.25rem 1rem;
		}
	}
}

footer {
	grid-area: -1;
	font-size: 12px;
	padding: 0.5rem 0.5rem;
	text-align: center;
	opacity: 0.721;
	background-color: transparentize($primary-fg, 0.85);
	color: $primary-fg;
}

